fixed grid-templ-col and gap

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -2,25 +2,9 @@
   display: grid;
   max-width: 944px;
   justify-items: center;
-  row-gap: 48px;
-  column-gap: 48px;
+  grid-template-columns: repeat(auto-fill,200px);
+  gap: 48px;
   margin: 0 auto;
-
-  @media (max-width:488px) {
-    grid-template-columns: repeat(1, 1fr);
-  }
-
-  @media (min-width:488px) {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  @media (min-width:768px) {
-    grid-template-columns: repeat(3, 1fr);
-  }
-
-  @media (min-width:1024px) {
-    grid-template-columns: repeat(4, 1fr);
-  }
 
   &__card {
     display: grid;
